<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.suriosity.learnhindi.MainActivity">

    <TextView
        style="@style/border"/>

    <TextView
        style="@style/categories"
        android:text="@string/numbers" />

    <TextView
        style="@style/border"/>

    <TextView
        style="@style/categories"
        android:text="@string/days" />

    <TextView
        style="@style/border"/>

    <TextView
        style="@style/categories"
        android:text="@string/relationships" />

    <TextView
        style="@style/border"/>

    <TextView
        style="@style/categories"
        android:text="@string/fruits_and_vegetables" />

    <TextView
        style="@style/border"/>

    <TextView
        style="@style/categories"
        android:text="@string/pronouns" />
    <TextView
        style="@style/border"/>

</LinearLayout>
